--- a/client/index.html
+++ b/client/index.html
@@ -17,9 +17,7 @@
 <template name="main">
 	<form>
 		<label>Input Commands Here</label>
-		<textarea class="form-control" name="assembly" rows="20" placeholder="SUB R1, R2, R3
-LB R2, -7(R0)
-..."></textarea>
+		<textarea class="form-control" name="assembly" rows="20" placeholder="SUB R1, R2, R3"></textarea>
 		<br>
 		<input class="form-control" type="submit">
 	</form>
